Comment change to pillbox only

--- a/pillbox/pillbox.html
+++ b/pillbox/pillbox.html
@@ -3,7 +3,7 @@
 <!doctype html> 
 
 <!-- 
-file: pillbox.htm for http://jorkke.github.io
+file: pillbox.html for https://jorkke.github.io
 first version written by Jorma Kuha 17th June, 2020
 -->
 
