--- a/pillbox/pillbox.html
+++ b/pillbox/pillbox.html
@@ -596,8 +596,8 @@ first version written by Jorma Kuha 17th June, 2020
                         <!-- Facebook-share: -->
                         <div style="display:inline-block;vertical-align:top">
 
-                        <div class="fb-share-button" data-href="https://jorkke.github.com/pillbox/pillbox.html" data-layout="button" 
-                        data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fjorkke.github.com%2Fpillbox%2Fpillbox.html&amp;src=sdkpreparse" 
+                        <div class="fb-share-button" data-href="https://jorkke.github.io/pillbox/pillbox.html" data-layout="button" 
+                        data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fjorkke.github.io%2Fpillbox%2Fpillbox.html&amp;src=sdkpreparse" 
                         class="fb-xfbml-parse-ignore">Share</a></div>                        
 
                         </div>
