--- a/pillbox/pillbox.html
+++ b/pillbox/pillbox.html
@@ -3,18 +3,18 @@
 <!doctype html> 
 
 <!-- 
-file: pillbox.html for https://jorkke.github.io
-first version written by Jorma Kuha 17th June, 2020
+file:  https://jorkke.github.io/pillbox/pillbox.html
+first version written by Jorma Kuha 21st June, 2020
 -->
 
 <html lang="en">
 
 <head>
 <link rel="stylesheet" type="text/css" href="../mystyle.css"> 
-<title>Jorkke's backyard</title>
+<title>Jorkke's backyard - The Smart Pillbox</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="author" content="Jorma Kuha">
-<meta name="description" content="Jorkke's backyard">
+<meta name="description" content="Jorkke's backyard - The Smart Pillbox">
 <meta name="keywords" content="Arduino, electronics, code, download">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
