--- a/pillbox/pillbox.html
+++ b/pillbox/pillbox.html
@@ -494,7 +494,7 @@ first version written by Jorma Kuha 21st June, 2020
                 }
                 </code></pre>
                 The <code>millis()</code> - function returns the number of milliseconds passed since the Arduino began running the current program as an 
-                <code> unsigned long int</code>, and it will overflow after approx. 50 days. This code handles also the overflow correctly.  
+                <code> unsigned long</code>, and it will overflow after approx. 50 days. This code handles also the overflow correctly.  
                 <br/>
                 <br/>
             </li>
@@ -511,7 +511,7 @@ first version written by Jorma Kuha 21st June, 2020
                     </li>
                     <li>
                         Be prepared for errors - for example I found that in extreme conditions (room temperature over 30 degrees Celsius, plus 
-                        using a low-quality USB power supplly) the higher range of the read voltage values was in practice non-usable, so I had to 
+                        using a low-quality USB power supply) the higher range of the read voltage values was in practice non-usable, so I had to 
                         scale the map-function accordingly.
                     </li>
 
