Added Life Tracker

--- a/index.html
+++ b/index.html
@@ -77,9 +77,13 @@ first version written by Jorma Kuha 17th June, 2020
                 <td>
                     <ul>
                         <li>
-                            <a href="pillbox/pillbox.html"><b>Smart pillbox</b></a> - reminds 
+                            <a href="pillbox/pillbox.html"><b>Smart Pillbox</b></a> - reminds 
                             you to take your medicine but unlike your phone reminder, does not remind you unless you need to be reminded!
                         </li>
+                        <li>
+                            <a href="lifetracker/lifetracker.html"><b>Life Tracker</b></a> - sends an alarm into your iPhone
+                            if your loved one, who lives far away, has been still for too long.
+                        </li>                        
                     </ul> 
                     <br/>                    
                     <em>... (more to come later)... </em>                    
