--- a/lifetracker/lifetracker.html
+++ b/lifetracker/lifetracker.html
@@ -331,7 +331,10 @@ first version written by Jorma Kuha in July, 2020
         <img src="pillbox_3.jpg" alt="Smart Pillbox cover" title="Smart Pillbox cover" style="margin:5px;float:left;max-width:30%;height:auto">
         <img src="pillbox_1.jpg" alt="Smart Pillbox opened" title="Smart Pillbox opened" style="margin:5px;float:right;max-width:30%;height:auto">
         -->
-        I am actually happy with the product as it is - it does its intended job well, and I don't see need for more functionality. 
+        The main improvement need: currently the alarm information flows along a path where multiple elements could fail. A much
+            better  solution would be having a "heartbeat" - a message on a regular interval, for example every 30 minutes, just 
+            to inform that the data link works. Lack of heartbeat would then be an alarm in itself. 
+            
         <br/>
         <br/>I like that there are no LED's (which tend to capture your attention without providing much information) -  the LCD is more "discrete" than a bunch of LED's. 
         <br/>    
