--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@ first version written by Jorma Kuha 17th June, 2020
                         <li>
                             <a href="lifetracker/lifetracker.html"><b>Life Tracker</b></a> - sends an alarm into your iPhone
                             if your loved one, who lives far away, has been still for too long.
+                        </li>  
+                        <li>
+                            <a href="FoodTraker/FoodTracker.html"><b>Food Tracker</b></a> - a Google-cloud based kitchen weight scale, 
+                             which tracks the calories you've eaten!
                         </li>                        
+                        
                     </ul> 
                     <br/>                    
                     <em>... (more to come later)... </em>                    
