--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ first version written by Jorma Kuha 17th June, 2020
                             if your loved one, who lives far away, has been still for too long.
                         </li>  
                         <li>
-                            <a href="FoodTraker/FoodTracker.html"><b>Food Tracker</b></a> - a Google-cloud based kitchen weight scale, 
+                            <a href="FoodTracker/FoodTracker.html"><b>Food Tracker</b></a> - a Google-cloud based kitchen weight scale, 
                              which tracks the calories you've eaten!
                         </li>                        
                         
